<resources>
    <string name="app_name">CursoAndroid</string>

    <string name="open_drawer">Abrindo o drawer</string>
    <string name="close_drawer">Fechando o drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="expense_form_header">Nova despesa</string>
    <string name="expense_form_date">Data</string>
    <string name="expense_form_save">Salvar</string>
    <string name="expense_form_save_new">Cancelar</string>
    <string name="expense_form_description">Descrição</string>
    <string name="expense_form_value">Valor</string>
    <string name="expense_form_categories">Categoria</string>
    <string name="expense_form_consolidated">Consolidado</string>

    <string name="expense_title_action_bar">Adicionar nova despesa</string>
    <string name="earning_title_action_bar">Adicionar novo ganho</string>

    <string name="main_fragment_header">Resumo do mês</string>
    <string name="main_fragment_expense">Gastos</string>
    <string name="main_fragment_earning">Recebimentos</string>
    <string name="main_fragment_economy">Economia</string>

    <string name="coin">R$ </string>

    <string name="earning_form_header">Novo ganho</string>

    <string name="drawer_menu_main">Principal</string>

    <string name="drawer_menu_bank">Contas bancárias</string>

    <string name="drawer_menu_card_credit">Cartão de crédito</string>
    <string name="drawer_menu_invoices">Contas</string>
    <string name="drawer_menu_installments">Parcelamentos</string>
    <string name="drawer_menu_resumes">Relatórios</string>
    <string name="drawer_header">Seja bem vindo</string>

    <string name="no_bank_text">Você ainda não tem uma conta bancária cadastrada no aplicativo.</string>
    <string name="no_bank_btn">Cadastre agora!</string>

    <string name="bank_form_header">Adicionar conta bancária</string>
    <string name="bank_form_name">Banco</string>
    <string name="bank_form_owner">Titular da conta</string>
    <string name="bank_from_current_balance">Saldo atual</string>
    <string name="bank_form_agency">Agência</string>

    <string name="current_balance_header">Saldo bancário:</string>
    <string name="depositBtn">Deposito</string>
    <string name="withdrawBtn">Saque</string>
    <string name="dialogconfirm">confirmar</string>
    <string name="current_limit_credit_card">Limite disponivel</string>
    <string name="credit_card_header">Cadastrar novo cartão</string>
    <string name="credit_card_name">Bandeira</string>
    <string name="credit_card_owner">Titular cartão</string>
    <string name="credit_card_limit">Limite disponivel</string>
    <string name="no_credit_card_text">Voceê ainda não cadastrou um cartão</string>
    <string name="credit_card_change_limite">Manipular limite</string>
    <string name="credit_card_reset_limit">Resetar limite</string>
    <string name="bill_form_header">Contas a pagar</string>
    <string name="bill_new_btn">Nova conta a pagar</string>
    <string name="bill_new_conta">Adicionar nova conta</string>
    <string name="bill_item_pay">Pagar</string>
    <string name="installment_list_new">Criar novo parcelamento</string>
    <string name="installment_list_header">Parcelamentos</string>
    <string name="installment_header">Parcelamentos</string>
    <string name="installment_value_dialog">Valor da parcela</string>
    <string name="installment_amount_dialog">Número de parcelas</string>
    <string name="earning_header">Ganhos</string>

    <string-array name="expense_category">
        <item>Lazer</item>
        <item>Energia</item>
        <item>Internet</item>
        <item>Agua</item>
    </string-array>
    <string-array name="earning_category">
        <item>Salário</item>
        <item>Empréstimo</item>
    </string-array>

</resources>
