<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_menu_main"
        android:icon="@drawable/drawer_menu_main"
        android:title="@string/drawer_menu_main" />
    <item
        android:id="@+id/drawer_menu_bank"
        android:icon="@drawable/drawer_menu_bank"
        android:title="@string/drawer_menu_bank" />
    <item
        android:id="@+id/drawer_menu_credit"
        android:icon="@drawable/drawer_menu_credit"
        android:title="@string/drawer_menu_card_credit" />
    <item
        android:id="@+id/drawer_menu_invoices"
        android:icon="@drawable/drawer_menu_invoices"
        android:title="@string/drawer_menu_invoices" />
    <item
        android:id="@+id/drawer_menu_installments"
        android:icon="@drawable/drawer_menu_installments"
        android:title="@string/drawer_menu_installments" />
    <item
        android:id="@+id/drawer_menu_resumes"
        android:icon="@drawable/drawer_menu_resumes"
        android:title="@string/drawer_menu_resumes" />
</menu>