<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="35dp"
    >

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/installment_header"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/installmentDescriptionDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/expense_form_description"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/installmentValueDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/installment_value_dialog"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/installmentAmountDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/installment_amount_dialog"
        android:inputType="number"
        android:textSize="18sp" />

    <Button
        android:id="@+id/installmentsConfirmBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/dialogconfirm" />
</LinearLayout>