<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.BillFormFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_new_conta"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_form_description"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/billDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/expense_form_description"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_form_value"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/expense_form_value"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_form_date"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/expense_form_date"
        android:inputType="date" />

    <Button
        android:id="@+id/billSaveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_form_save" />

    <Button
        android:id="@+id/billCancelBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_form_save_new" />
</LinearLayout>