<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".views.BankFormFragment">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/bank_form_header"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_form_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/bankTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bank_form_name"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bank_form_owner"
        android:text="@string/bank_form_owner" />

    <EditText
        android:id="@+id/ownerTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bank_form_owner"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_form_agency"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/agencyTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bank_form_agency"
        android:inputType="number"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_from_current_balance"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/balanceTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bank_from_current_balance"
        android:inputType="numberDecimal"
        android:autofillHints="" tools:targetApi="o"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="163dp">

        <Button
            android:id="@+id/cancelBankBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:text="@string/expense_form_save_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <Button
            android:id="@+id/saveBankBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_form_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toEndOf="@+id/cancelBankBTN"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>