<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrantLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.BankInfoFragment">

    <fragment
        android:id="@+id/fragment2"
        android:name="com.pontes.cursoandroid.views.BalanceCurrentFragment"
        android:layout_width="410dp"
        android:layout_height="205dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_balance_current" />

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="302dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment2"
        app:layout_constraintVertical_bias="0.100000024">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_form_name"
            android:textColor="@android:color/background_dark"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/bankinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_form_owner"
            android:textColor="@android:color/background_dark"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/ownerinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_form_agency"
            android:textColor="@android:color/background_dark"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/agencyinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp" />

        <Button
            android:id="@+id/depositBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/depositBtn" />

        <Button
            android:id="@+id/withdrawBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdrawBtn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>