<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreditCardInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <fragment
        android:id="@+id/fragment4"
        android:name="com.pontes.cursoandroid.views.LimitCreditCardFragment"
        android:layout_width="410dp"
        android:layout_height="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        tools:layout="@layout/fragment_limit_credit_card" />

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="357dp"
        android:layout_marginBottom="76dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment4">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_name"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/flagInfoTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_owner"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ownerInfoTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp" />

        <Button
            android:id="@+id/changeLimitBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_change_limite" />

        <Button
            android:id="@+id/resetLimitBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_reset_limit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>